# worldpop

./: CHANGELOG.md  README-template.md  README.md  docker_env  environment.yml  mypy.ini  requirements-dev.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: installation_and_basic_usage.ipynb
examples/: FIN_2020.json  collection.json
src/stactools/worldpop/: __init__.py  cog.py  commands.py  constants.py  stac.py  utils.py
tests/: test_commands.py  test_module.py  test_stac.py
tests/data-files/: abw_ppp_2020_UNadj_constrained.tif
